# linux-homeserver-config

./: .ansible-lint-ignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  hosts.ini  pyproject.toml
playbooks/: avahi.yml  baikal.yml  create_data_dir.yml  docker.yml  fail2ban.yml  firewall.yml  site.yml  ssh_hardening.yml  syncthing.yml  update.yml
